test/tests/errors/error-valof-return-no-valof-proc.sm
// true
// false
// false
/**/
/**/

program {
    proc x(y: int) {
        return y;
    }

    output valof: int {
        x(1);
    };
}